# D3D11Renderer

./: .gitignore  CMakeLists.txt  ClairRenderer.sln  README.md
Clair/: CMakeLists.txt  Clair.vcxproj
Clair/Clair/: Clair.vcxproj
Clair/Clair/src/: Clair.cpp  D3dDevice.h  (+34 more)
Clair/MaterialTool/: MaterialTool.vcxproj
Clair/MeshTool/: MeshTool.vcxproj
Clair/src/: LowLevelRenderer.cpp  LowLevelRenderer.h  LowLevelRenderer2.h  Mesh.h  Mesh2.h  Object.cpp  Object2.cpp  Renderer.cpp  Serialization2.h  VertexLayoutOld.cpp  VertexLayoutOld2.cpp  emptyVertexShader.h  indexBuffer.h  lowLevelRenderer.cpp  lowLevelRenderer.h  material.cpp  material.h  mesh.h  object.cpp  renderer.cpp  scene.cpp  serialization.h  vertexBuffer.cpp  vertexBuffer.h
MaterialTool/: MaterialTool.vcxproj
MaterialTool/src/: main.cpp
MeshTool/: MeshTool.vcxproj
MeshTool/src/: main.cpp
Sample/: CMakeLists.txt  PixelShader.cso  Sample.vcxproj  VertexShader.cso
Sample/data/: material.csm  sub.csm
Sample/include/: Camera.h  Camera2.h  GlmMath.h  camera.h  input.h  sample.h  timer.h
Sample/src/: Camera.cpp  Input.cpp  Sample.cpp  camera.cpp  input.cpp  main.cpp  sample.cpp
docs/: essay.docx
lib/: Clair.lib  Clair_d.lib  SDL2_d.lib  SDL2main_d.lib
samples/AdvancedSample/: AdvancedSample.vcxproj  README.md
samples/BasicSample/: BasicSample.vcxproj  README.md
samples/DeferredSample/: DeferredSample.vcxproj  README.md
samples/HDRSample/: HDRSample.vcxproj
samples/IBLSample/: IBLSample.vcxproj  README.md
samples/MaterialSample/: MaterialSample.vcxproj
samples/Sample/: Sample.vcxproj
(+220 files in other folders)
